# TechnoTrack_C

./: .gitignore  CMakeLists.txt  README.md  Text.txt  main.c  main.cpp  shakespeare  shakspeare.cpp  shakspeare.h  sorter.c  sorter.h
Akinator/: CMakeLists.txt  file.txt
Akinator/Akinator/: Akinator.h  main.cpp
Akinator/Fileworking/: fileworking.h
Akinator/Tree_t/: Tree.cpp  Tree.h
Akinator/base/: base.txt
Akinator/picture/: dotDump.txt  dotPrint.txt  filename
HashTables/: CMakeLists.txt  HashTable.hpp  Test.txt  main.cpp
HashTables/HashFunctions/: HashFunctions.cpp  HashFunctions.h
HashTables/List_t/: List.h
HashTables/WorkWithFiles/: WorkWithFiles.cpp  WorkWithFiles.h
Onegin/: sorter.h
Printf/: MyAsm.asm  main.c
Shakespeare/: alphabet.txt  rhyme.txt
Vector/: ExceptionList.h  main.cpp  vector.hpp
